Cambio y encontre nuevo template mas facil de modificar

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i> Landing Zero</a>
+                <a class="navbar-brand page-scroll" href="#first"><i class="ion-ios-analytics-outline"></i> Magic Cocktail</a>
             </div>
             <div class="navbar-collapse collapse" id="bs-navbar">
                 <ul class="nav navbar-nav">
@@ -54,10 +54,10 @@
     <header id="first">
         <div class="header-content">
             <div class="inner">
-                <h1 class="cursive">Magic Cocktail</h1>
-                <h4>Te encanta</h4>
+                <h1 class="cursive text-primary">Magic Cocktail</h1>
+                <h4 class="text-primary">Te encanta</h4>
                 <hr>
-                <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Get Started</a>
+                <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp; <a href="#one" class="btn btn-primary btn-xl page-scroll">Historia</a>
             </div>
         </div>
         <video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
@@ -68,11 +68,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Built On The Bootstrap Grid</h2>
+                    <h2 class="margin-top-0 text-primary">Historia del magic cocktail</h2>
                     <br>
                     <p class="text-faded">
-                        Bootstrap's responsive grid comes in 4 sizes or "breakpoints": tiny (xs), small(sm), medium(md) and large(lg). These 4 grid sizes enable you create responsive layouts that behave accordingly on different devices.
+                        Es un cocktail para personas que disfruten del verano con un sabo exotico, con una buena cantidad de alchool pero sin peder el buen sabor. No es una vara fea todo lo contrario. Pero se puede pensar que es cacique no no es cacique, no es tequila. ES SALSA TEQUILA CORAZON.
                     </p>
+                    <div id="logo">
+                        <img class="logo" src="./img/magic-logo.jpg" alt="My_Logo">
+                    </div>
                     <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
                 </div>
             </div>
