--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,7 +7,6 @@ http://www.bootstrapzero.com
 
 @import url(https://fonts.googleapis.com/css?family=Questrial);
 @import url(http://fonts.googleapis.com/css?family=Dancing+Script:700);
-
 html,
 body {
     width: 100%;
@@ -15,7 +14,7 @@ body {
 }
 
 body {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
     background-color: #282828;
     color: #d3d3d3;
     webkit-tap-highlight-color: #222;
@@ -46,8 +45,13 @@ a:focus {
     outline: 0;
 }
 
-h1,h2,h3,h4,h5,h6 {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
 }
 
 p {
@@ -79,8 +83,10 @@ p {
     text-transform: none;
 }
 
+
+
 .text-faded {
-    color: rgba(245,245,245,0.7);
+    color: rgba(245, 245, 245, 0.7);
 }
 
 .text-dark {
@@ -112,8 +118,8 @@ footer {
 }
 
 .navbar-default {
-    border-color: rgba(35,35,35,.05);
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    border-color: rgba(35, 35, 35, .05);
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
     background-color: #222;
     -webkit-transition: all .4s;
     -moz-transition: all .4s;
@@ -121,7 +127,7 @@ footer {
 }
 
 .navbar-header > .navbar-brand {
-    font-family: 'Questrial','Helvetica Neue',Arial,sans-serif;
+    font-family: 'Questrial', 'Helvetica Neue', Arial, sans-serif;
     color: #9c27b0;
     padding: 15px;
     -webkit-transition: padding .2s ease-in;
@@ -134,10 +140,13 @@ footer {
     color: #8b27b0;
 }
 
-.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
     background-color: #181818;
 }
-.navbar-default .navbar-toggle, .navbar-default .navbar-collapse {
+
+.navbar-default .navbar-toggle,
+.navbar-default .navbar-collapse {
     border-color: transparent;
 }
 
@@ -161,11 +170,9 @@ footer {
 }
 
 .navbar-default .nav > li.active>a:hover,
-.navbar-default .nav>li.active>a:focus:hover
-{
+.navbar-default .nav>li.active>a:focus:hover {
     background-color: transparent;
 }
-
 
 @media(min-width:768px) {
     .navbar-default {
@@ -173,53 +180,44 @@ footer {
         background-color: transparent;
         min-height: 60px;
     }
-
     .navbar-header > .navbar-brand {
-        color: rgba(255,255,255,0.7);
+        color: rgba(255, 255, 255, 0.7);
         padding: 19px;
     }
-
     .navbar-default .navbar-header .navbar-brand:hover,
     .navbar-default .navbar-header .navbar-brand:focus {
         color: #f4f4f4;
     }
-
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,0.8);
+        color: rgba(255, 255, 255, 0.8);
         padding: 20px;
         letter-spacing: 1.1px;
-        text-shadow: 1px 1px 1px rgba(60,60,60,0.7);
+        text-shadow: 1px 1px 1px rgba(60, 60, 60, 0.7);
     }
-
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
         color: #fefefe;
     }
-
     .navbar-default.affix {
-        border-color: rgba(34,34,34,.05);
+        border-color: rgba(34, 34, 34, .05);
         background-color: #222;
     }
-
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 15px;
         color: #9c27b0;
         padding: 20px;
         letter-spacing: 1px;
     }
-
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
         color: #8b27b0;
     }
-
     .navbar-default.affix .nav > li>a,
     .navbar-default.affix .nav>li>a:focus {
         color: #ddd;
-        text-shadow: 1px 1px 1px rgba(30,30,30,0.7);
+        text-shadow: 1px 1px 1px rgba(30, 30, 30, 0.7);
     }
-
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
         color: #9c27b0;
@@ -258,37 +256,35 @@ header .header-content .inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,0.7);
+    color: rgba(255, 255, 255, 0.7);
 }
 
 #video-background {
-  position: absolute;
-  right: 0; 
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-  width: auto; 
-  height: auto;
-  z-index: 1;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: 1;
 }
 
 #video-background.collapsing {
-  display:none;
+    display: none;
 }
 
 footer {
-    background-color:#2d2d2d;
+    background-color: #2d2d2d;
 }
 
 @media(min-width:768px) {
     .icon-lg {
         font-size: 80px;
     }
-    
     header {
         min-height: 100%;
     }
-
     header .header-content {
         position: absolute;
         top: 50%;
@@ -297,29 +293,24 @@ footer {
         -ms-transform: translateY(-50%);
         transform: translateY(-50%);
     }
-
     header .header-content .inner {
         margin-right: auto;
         margin-left: auto;
         max-width: 1000px;
     }
-
     header .header-content .inner h1 {
         font-size: 53px;
     }
-
     header .header-content .inner p {
         margin-right: auto;
         margin-left: auto;
         max-width: 80%;
         font-size: 18px;
     }
-    
     section {
         min-height: 600px;
         padding: 100px 0;
     }
-
 }
 
 .form-control {
@@ -376,7 +367,7 @@ textarea {
     position: relative;
     margin: 0 auto;
     max-width: 650px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .gallery-box .gallery-box-caption {
@@ -388,7 +379,7 @@ textarea {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(44,44,44,.8);
+    background: rgba(44, 44, 44, .8);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -479,8 +470,8 @@ fieldset[disabled] .btn-default.active {
 
 .btn.btn-primary {
     background-color: transparent;
-    border:1px solid #f0f0f0;
-    border-color:#f0f0f0;
+    border: 1px solid #f0f0f0;
+    border-color: #f0f0f0;
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
@@ -493,7 +484,7 @@ fieldset[disabled] .btn-default.active {
 .btn {
     border: 0;
     border-radius: 290px;
-    font-family: 'Helvetica Neue',Arial,sans-serif;
+    font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
 .btn-xl {
