--- a/src/views/index.html
+++ b/src/views/index.html
@@ -85,7 +85,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="margin-top-0 text-primary">Flexible Layouts</h2>
+                    <h2 class="margin-top-0 text-primary">Consumo Responsable</h2>
                     <hr class="primary">
                 </div>
             </div>
@@ -95,22 +95,23 @@
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Responsive</h3>
-                        <p class="text-muted">Your site looks good everywhere</p>
+                        <h3>Moderación</h3>
+                        <p class="text-muted">Cualquier intoxicación por alcohol puede traer consecuencias graves de carácter social, psicológico y físico. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
-                        <h3>Customizable</h3>
-                        <p class="text-muted">Easy to theme and customize with SASS</p>
+                        <h3>Elige a un conductor</h3>
+                        <p class="text-muted">
+Antes de salir de casa decide quién llevará el coche, o asegúrate de tener suficiente dinero para volver en taxi.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
-                        <h3>Consistent</h3>
-                        <p class="text-muted">A mature, well-tested, stable codebase</p>
+                        <h3>Respeta 18</h3>
+                        <p class="text-muted">Verifica la edad solicitando una identificacin.</p>
                     </div>
                 </div>
             </div>
@@ -202,7 +203,7 @@
                 <div class="media wow fadeInRight">
                     <h3>Simple</h3>
                     <div class="media-body media-middle">
-                        <p>What could be easier? Get started fast with this landing page starter theme.</p>
+                        <p>Fácil y rápida preparación.</p>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-bolt-outline"></i>
@@ -220,9 +221,9 @@
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Unique</h3>
+                    <h3>Unico</h3>
                     <div class="media-body media-middle">
-                        <p>Because you don't want your Bootstrap site, to look like a Bootstrap site.</p>
+                        <p>Un sabor refrescante, único y pura vida.</p>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-snowy"></i>
@@ -235,14 +236,14 @@
                         <i class="icon-lg ion-ios-heart-outline"></i>
                     </div>
                     <div class="media-body media-middle">
-                        <p>There's good reason why Bootstrap is the most used frontend framework in the world.</p>
+                        <p>Es una bebida popular en todas las edades por su sabor, calidad y presentación.</p>
                     </div>
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Tested</h3>
+                    <h3>Probada</h3>
                     <div class="media-body media-middle">
-                        <p>Bootstrap is matured and well-tested. It's a stable codebase that provides consistency.</p>
+                        <p>Es un producto con altos estandares de calidad para clientes exigentes.</p>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-flask-outline"></i>
