--- a/src/views/index.html
+++ b/src/views/index.html
@@ -18,7 +18,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar">
-                     <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -37,7 +37,7 @@
                         <a class="page-scroll" href="#three">Fotos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#four">Features</a>
+                        <a class="page-scroll" href="#four">Atributos</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#last">Contacto</a>
@@ -57,7 +57,7 @@
                 <h1 class="cursive text-primary">Magic Cocktail</h1>
                 <h4 class="text-primary">Te encanta</h4>
                 <hr>
-               <!-- <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;--> <a href="#one" class="btn btn-primary btn-xl page-scroll">Historia</a>
+                <!-- <a href="#video-background" id="toggleVideo" data-toggle="collapse" class="btn btn-primary btn-xl">Toggle Video</a> &nbsp;--><a href="#one" class="btn btn-primary btn-xl page-scroll">Historia</a>
             </div>
         </div>
         <!--<video autoplay="" loop="" class="fillWidth fadeIn wow collapse in" data-wow-delay="0.5s" poster="https://s3-us-west-2.amazonaws.com/coverr/poster/Traffic-blurred2.jpg" id="video-background">
@@ -104,7 +104,7 @@
                         <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
                         <h3>Elige a un conductor</h3>
                         <p class="text-muted">
-Antes de salir de casa decide quién llevará el coche, o asegúrate de tener suficiente dinero para volver en taxi.</p>
+                            Antes de salir de casa decide quién llevará el coche, o asegúrate de tener suficiente dinero para volver en taxi.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
@@ -286,15 +286,15 @@ Antes de salir de casa decide quién llevará el coche, o asegúrate de tener su
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">Get in Touch</h2>
+                    <h2 class="margin-top-0 wow fadeIn">Contacto</h2>
                     <hr class="primary">
-                    <p>We love feedback. Fill out the form below and we'll get back to you as soon as possible.</p>
+                    <p>Nos interesa tu opini&oacuten. Completa el formulario y nosotros te contactaremos los más rápido posible.</p>
                 </div>
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <form class="contact-form row">
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" placeholder="Name">
+                            <input type="text" class="form-control" placeholder="Nombre">
                         </div>
                         <div class="col-md-4">
                             <label></label>
@@ -302,15 +302,15 @@ Antes de salir de casa decide quién llevará el coche, o asegúrate de tener su
                         </div>
                         <div class="col-md-4">
                             <label></label>
-                            <input type="text" class="form-control" placeholder="Phone">
+                            <input type="text" class="form-control" placeholder="Telefono">
                         </div>
                         <div class="col-md-12">
                             <label></label>
-                            <textarea class="form-control" rows="9" placeholder="Your message here.."></textarea>
+                            <textarea class="form-control" rows="9" placeholder="Escriba su mensaje aqui.."></textarea>
                         </div>
                         <div class="col-md-4 col-md-offset-4">
                             <label></label>
-                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Send <i class="ion-android-arrow-forward"></i></button>
+                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Enviar <i class="ion-android-arrow-forward"></i></button>
                         </div>
                     </form>
                 </div>
