--- a/src/views/index.html
+++ b/src/views/index.html
@@ -198,7 +198,7 @@
     <section class="container-fluid" id="four">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <h2 class="text-center text-primary">Features</h2>
+                <h2 class="text-center text-primary">Atributos</h2>
                 <hr>
                 <div class="media wow fadeInRight">
                     <h3>Simple</h3>
@@ -252,6 +252,7 @@
             </div>
         </div>
     </section>
+    <!--
     <aside class="bg-dark">
         <div class="container text-center">
             <div class="call-to-action">
@@ -282,40 +283,43 @@
             </div>
         </div>
     </aside>
+-->
     <section id="last">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="margin-top-0 wow fadeIn">Contacto</h2>
-                    <hr class="primary">
-                    <p>Nos interesa tu opini&oacuten. Completa el formulario y nosotros te contactaremos los más rápido posible.</p>
-                </div>
-                <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <form class="contact-form row">
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Nombre">
-                        </div>
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="col-md-4">
-                            <label></label>
-                            <input type="text" class="form-control" placeholder="Telefono">
-                        </div>
-                        <div class="col-md-12">
-                            <label></label>
-                            <textarea class="form-control" rows="9" placeholder="Escriba su mensaje aqui.."></textarea>
-                        </div>
-                        <div class="col-md-4 col-md-offset-4">
-                            <label></label>
-                            <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Enviar <i class="ion-android-arrow-forward"></i></button>
-                        </div>
-                    </form>
+        <aside class="bg-dark">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2 text-center">
+                        <h2 class="margin-top-0 wow fadeIn">Contacto</h2>
+                        <hr class="primary">
+                        <p>Nos interesa tu opini&oacuten. Completa el formulario y nosotros te contactaremos los más rápido posible.</p>
+                    </div>
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                        <form class="contact-form row">
+                            <div class="col-md-4">
+                                <label></label>
+                                <input type="text" class="form-control" placeholder="Nombre">
+                            </div>
+                            <div class="col-md-4">
+                                <label></label>
+                                <input type="text" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="col-md-4">
+                                <label></label>
+                                <input type="text" class="form-control" placeholder="Telefono">
+                            </div>
+                            <div class="col-md-12">
+                                <label></label>
+                                <textarea class="form-control" rows="9" placeholder="Escriba su mensaje aqui.."></textarea>
+                            </div>
+                            <div class="col-md-4 col-md-offset-4">
+                                <label></label>
+                                <button type="button" data-toggle="modal" data-target="#alertModal" class="btn btn-primary btn-block btn-lg">Enviar <i class="ion-android-arrow-forward"></i></button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
+        </aside>
     </section>
     <footer id="footer">
         <div class="container-fluid">
