--- a/src/views/index.html
+++ b/src/views/index.html
@@ -68,15 +68,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 text-center">
-                    <h2 class="margin-top-0 text-primary">Historia del magic cocktail</h2>
+                    <h2 class="margin-top-0 text-primary">Historia</h2>
                     <br>
                     <p class="text-faded">
-                        Es un cocktail para personas que disfruten del verano con un sabo exotico, con una buena cantidad de alchool pero sin peder el buen sabor. No es una vara fea todo lo contrario. Pero se puede pensar que es cacique no no es cacique, no es tequila. ES SALSA TEQUILA CORAZON.
+                        Es un cocktail para personas que disfrutan del verano, con un sabor exótico y una buena cantidad de alcohol pero sin peder el buen sabor. Creado por un grupo de estudiantes universitarios emprendedores.
                     </p>
                     <div id="logo">
                         <img class="logo" src="./img/magic-logo.jpg" alt="My_Logo">
                     </div>
-                    <a href="#three" class="btn btn-default btn-xl page-scroll">Learn More</a>
+                    <a href="#three" class="btn btn-default btn-xl page-scroll">Fotos</a>
                 </div>
             </div>
         </div>
@@ -94,14 +94,14 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
-                        <i class="icon-lg ion-android-laptop wow fadeIn" data-wow-delay=".3s"></i>
+                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
                         <h3>Moderación</h3>
                         <p class="text-muted">Cualquier intoxicación por alcohol puede traer consecuencias graves de carácter social, psicológico y físico. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
-                        <i class="icon-lg ion-social-sass wow fadeInUp" data-wow-delay=".2s"></i>
+                    <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
                         <h3>Elige a un conductor</h3>
                         <p class="text-muted">
                             Antes de salir de casa decide quién llevará el coche, o asegúrate de tener suficiente dinero para volver en taxi.</p>
@@ -211,17 +211,17 @@
                 </div>
                 <hr>
                 <div class="media wow fadeIn">
-                    <h3>Free</h3>
+                    <h3>Tropical</h3>
                     <div class="media-left">
                         <a href="#alertModal" data-toggle="modal" data-target="#alertModal"><i class="icon-lg ion-ios-cloud-download-outline"></i></a>
                     </div>
                     <div class="media-body media-middle">
-                        <p>Yes, please. Grab it for yourself, and make something awesome with this.</p>
+                        <p>Especialmente diseñada para la playa y climas tropicales.</p>
                     </div>
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Unico</h3>
+                    <h3>Único</h3>
                     <div class="media-body media-middle">
                         <p>Un sabor refrescante, único y pura vida.</p>
                     </div>
@@ -236,14 +236,14 @@
                         <i class="icon-lg ion-ios-heart-outline"></i>
                     </div>
                     <div class="media-body media-middle">
-                        <p>Es una bebida popular en todas las edades por su sabor, calidad y presentación.</p>
+                        <p>Es una bebida popular por su sabor, calidad y presentación.</p>
                     </div>
                 </div>
                 <hr>
                 <div class="media wow fadeInRight">
-                    <h3>Probada</h3>
+                    <h3>Certificado</h3>
                     <div class="media-body media-middle">
-                        <p>Es un producto con altos estandares de calidad para clientes exigentes.</p>
+                        <p>Es un producto con altos estándares de calidad para clientes exigentes.</p>
                     </div>
                     <div class="media-right">
                         <i class="icon-lg ion-ios-flask-outline"></i>
@@ -345,13 +345,13 @@
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-3 column">
-                    <h4>Stay Posted</h4>
+                    <h4>Mantente informado</h4>
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" title="No spam, we promise!" placeholder="Tell us your email">
+                            <input type="text" class="form-control" title="No spam, we promise!" placeholder="E-mail">
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-primary" data-toggle="modal" data-target="#alertModal" type="button">Subscribe for updates</button>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#alertModal" type="button">Suscribirse</button>
                         </div>
                     </form>
                 </div>
@@ -403,9 +403,9 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-body">
-                    <h2 class="text-center">Nice Job!</h2>
-                    <p class="text-center">You clicked the button, but it doesn't actually go anywhere because this is only a demo.</p>
-                    <p class="text-center"><a href="http://www.bootstrapzero.com">Learn more at BootstrapZero</a></p>
+                    <h2 class="text-center">Excelente</h2>
+                    <p class="text-center">Te mantendremos informado sobre nuestras actividades y nuevos productos.</p>
+                    
                     <br/>
                     <button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-android-close"></i></button>
                 </div>
