--- a/src/views/index.html
+++ b/src/views/index.html
@@ -95,6 +95,7 @@
                 <div class="col-lg-4 col-md-4 text-center">
                     <div class="feature">
                         <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
+                        <i class="icon-lg ion-ios-star-outline wow fadeIn" data-wow-delay=".3s"></i>
                         <h3>Moderación</h3>
                         <p class="text-muted">Cualquier intoxicación por alcohol puede traer consecuencias graves de carácter social, psicológico y físico. </p>
                     </div>
@@ -209,7 +210,7 @@
                         <i class="icon-lg ion-ios-bolt-outline"></i>
                     </div>
                 </div>
-                <hr>
+               <!-- <hr>
                 <div class="media wow fadeIn">
                     <h3>Tropical</h3>
                     <div class="media-left">
@@ -219,7 +220,7 @@
                         <p>Especialmente diseñada para la playa y climas tropicales.</p>
                     </div>
                 </div>
-                <hr>
+                <hr>-->
                 <div class="media wow fadeInRight">
                     <h3>Único</h3>
                     <div class="media-body media-middle">
