--- a/src/views/index.html
+++ b/src/views/index.html
@@ -360,7 +360,7 @@
                     <h4>Follow</h4>
                     <ul class="list-inline">
                         <li><a rel="nofollow" href="" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
-                        <li><a rel="nofollow" href="" title="Facebook"><i class="icon-lg ion-social-facebook-outline"></i></a>&nbsp;</li>
+                        <li><a rel="nofollow" href="https://www.facebook.com/MagicCocktailCR/" title="Facebook"><i class="icon-lg ion-social-facebook-outline"></i></a>&nbsp;</li>
                         <li><a rel="nofollow" href="" title="Dribble"><i class="icon-lg ion-social-dribbble-outline"></i></a></li>
                     </ul>
                 </div>
