--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -44,21 +44,17 @@
 			</div>
 			<div class="navbar-collapse collapse" id="bs-navbar">
 				<ul class="nav navbar-nav">
-					<li>
-						<a class="page-scroll" href="#one">Historia</a>
-					</li>
-					<li>
-						<a class="page-scroll" href="#two">Consumo responsable</a>
-					</li>
-					<li>
-						<a class="page-scroll" href="#three">Fotos</a>
-					</li>
-					<li>
-						<a class="page-scroll" href="#four">Atributos</a>
-					</li>
-					<li>
-						<a class="page-scroll" href="#last">Contacto</a>
-					</li>
+
+					<% for(var i=0;i<list.length;i++){%>
+						<li>
+
+							<a class="page-scroll" href="<%=list[i].Link%>">
+								<%= list[i].Text%>
+							</a>
+						</li>
+						<% } %>
+
+
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li>
